test/riscv/error/compiler/test_riscv_error_compiler_016.out


Error: Unterminated string literal
   ╭─[ assembly:8:34 ]
   │
 8 │     example:    .string hello world"
   │                                     ┬  
   │                                     ╰── Caused by this
   │                                     │  
   │                                     ╰── while parsing this token
───╯

Not executed
keyboard[0x0]:''; display[0x0]:''; 

